Change update offices in employee